@@ -1,5 +1,8 @@
 2001-08-22  Rodrigo Moya <rodrigo@gnome-db.org>
 
+	* gda-field.c (gda_field_copy_to_corba,
+	gda_field_copy_to_corba_attributes): new CORBA utility functions
+
 	* gda-field.c (gda_field_set_date_value, gda_field_get_date_value,
 	gda_field_set_time_value, gda_field_get_time_value,
 	gda_field_set_timestamp_value, gda_field_get_timestamp_value):
